<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.revyuk.mystorekeeper.SingInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/singin_email_hint"/>
        <EditText
            android:id="@+id/password"
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/singin_pwd_hint"/>
        <CheckBox
            android:id="@+id/singincheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/singin_checkbox_label"/>
        <FrameLayout
            android:id="@+id/singin_frame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/retype_password"
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/singin_retypepwd_hint"/>
        </FrameLayout>
        <Button
            android:id="@+id/singinbtn"
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/singin_button_text"/>
    </LinearLayout>
</RelativeLayout>
