<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.revyuk.mystorekeeper.ReportActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_label_text"
            android:id="@+id/textView" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/report_rb1"
                android:id="@+id/radioButton1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_rb2"
                android:id="@+id/radioButton2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_rb3"
                android:id="@+id/radioButton3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_rb4"
                android:id="@+id/radioButton4" />
        </RadioGroup>
        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner" />
        </LinearLayout>
        <Button
            android:id="@+id/reportButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_get_button"
            android:layout_below="@id/lin1"/>
        <LinearLayout
            android:layout_below="@id/reportButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/listViewSummary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            </ListView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
