<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/singlabels"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <Button
                android:id="@+id/singin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_singin_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right">
            <Button
                android:id="@+id/reports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_report_text"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/mainButton"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/main_button_text"/>
    <TextView
        android:id="@+id/textview"
        android:layout_above="@id/mainButton"
        android:layout_margin="5dp"
        android:text="@string/main_label_1"
        android:textSize="9dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/barcode"
        android:layout_margin="5dp"
        android:inputType="number"
        android:layout_above="@id/textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/barcode"
        android:src="@drawable/logo" />

</RelativeLayout>
