<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="com.revyuk.mystorekeeper.UnitActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="#000000"
            android:text="@string/receipt_header1"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/logButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="log"/>
            <EditText
                android:id="@+id/barcode"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/receipt_barcode_label"/>
        <EditText
            android:id="@+id/itemname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/receipt_itemname_label"/>
        <EditText
            android:id="@+id/trademark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/receipt_trademark_label"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/plus10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+10"/>
                <Button
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"/>
                <EditText
                    android:id="@+id/count"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:enabled="false"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="0"/>
                <Button
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"/>
                <Button
                    android:id="@+id/minus10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/countlabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/receipt_count_label"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_margin="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipt_add_button"/>
        <LinearLayout
            android:id="@+id/expenseLayout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="#000000"
                android:text="@string/receipt_header2"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/expensePlus10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+10"/>
                <Button
                    android:id="@+id/expensePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"/>
                <EditText
                    android:id="@+id/expenseCount"
                    android:inputType="number"
                    android:gravity="center_horizontal"
                    android:enabled="false"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="0"/>
                <Button
                    android:id="@+id/expenseMinus"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"/>
                <Button
                    android:id="@+id/expenseMinus10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-10"/>
            </LinearLayout>
            <Button
                android:id="@+id/expenseDeleteButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/receipt_del_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
